--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "zod": "^3.24.1"
   }
 }
